// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for GoogleDataManager's ingest destination action: all fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "address": Object {
              "familyName": "b#TgBtvsSl",
              "givenName": "b#TgBtvsSl",
              "postalCode": "b#TgBtvsSl",
              "regionCode": "b#TgBtvsSl",
            },
            "emailAddress": "b#TgBtvsSl",
            "phoneNumber": "b#TgBtvsSl",
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8172370552",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {},
    },
  ],
  "encoding": "BASE64",
}
`;

exports[`Testing snapshot for GoogleDataManager's ingest destination action: required fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "153af84a71b6f973d61ca0d9adcd60cc26a51aca0254b17d01283303d697d346",
          },
          Object {
            "phoneNumber": "153af84a71b6f973d61ca0d9adcd60cc26a51aca0254b17d01283303d697d346",
          },
          Object {
            "address": Object {
              "familyName": "153af84a71b6f973d61ca0d9adcd60cc26a51aca0254b17d01283303d697d346",
              "givenName": "153af84a71b6f973d61ca0d9adcd60cc26a51aca0254b17d01283303d697d346",
              "postalCode": "b#TgBtvsSl",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "b#TgBtvsSl",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;

exports[`Testing snapshot for GoogleDataManager's syncUserData destination action: all fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "phoneNumber": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "address": Object {
              "familyName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "givenName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "postalCode": "Aq)B1!ex*ocK",
              "regionCode": "Aq)B1!ex*ocK",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Aq)B1!ex*ocK",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;

exports[`Testing snapshot for GoogleDataManager's syncUserData destination action: required fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "phoneNumber": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "address": Object {
              "familyName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "givenName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "postalCode": "Aq)B1!ex*ocK",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Aq)B1!ex*ocK",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;
